--- a/Game/UI/Pages/BankPage.xaml
+++ b/Game/UI/Pages/BankPage.xaml
@@ -105,8 +105,8 @@
                             <ComboBox x:Name="TransferBankSelectionComboBox" Background="White" BorderBrush="White"
                                       ItemsSource="{Binding Source={x:Static e:Global.BankEndpoints}}"
                                       DisplayMemberPath="Name"
-                                      SelectedValuePath="Name"
-                                      SelectedValue="{Binding Path=SelectedBank, UpdateSourceTrigger=PropertyChanged}" />
+                                      SelectedValuePath="."
+                                      SelectedValue="{Binding Path=ReceiverBank, UpdateSourceTrigger=PropertyChanged}" />
                         </ContentControl>
 
                         <TextBlock Text="Receiver: " Grid.Column="0" Grid.Row="1" Height="20" />
