--- a/Game/UI/Pages/IRC.xaml
+++ b/Game/UI/Pages/IRC.xaml
@@ -1,4 +1,4 @@
-﻿<local:DisplayablePage x:Class="Game.UI.IRC"
+﻿<local:DisplayablePage x:Class="Game.UI.Pages.IRC"
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
